force-app/main/default/objects/ShopifyProduct__c/ShopifyProduct__c.object-meta.xml
<CustomObject>
    <enableHistory>false</enableFeeds>
    <label>Shopify Product</label>
    <nameField>
        <displayFormat>PROD-{0000}</displayFormat>
        <label>Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shopify Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>