force-app/main/default/objects/ShopifyProduct__c/fields/ProductTitle__c.field-meta.xml
<CustomField>
    <fullName>ProductTitle__c</fullName>
    <label>Product Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>