force-app/main/default/objects/ShopifyProduct__c/fields/ShopifyProductId__c.field-meta.xml
<CustomField>
    <fullName>ShopifyProductId__c</fullName>
    <externalId>true</externalId>
    <label>Shopify Product ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>