force-app/main/default/objects/ShopifyProduct__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>archived</fullName>
                <label>Archived</label>
            </value>
            <value>
                <fullName>draft</fullName>
                <label>Draft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>